<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hola" />

        <CheckBox
            android:id="@+id/all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onCheckesClick"
            android:text="@string/all_checkbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <CheckBox
            android:id="@+id/spanish_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/spanish_checkbox" />

        <CheckBox
            android:id="@+id/mat_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/mat_checkbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <CheckBox
            android:id="@+id/science_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/science_checkbox" />

        <CheckBox
            android:id="@+id/history_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/history_checkbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">

        <CheckBox
            android:id="@+id/geo_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/geo_checkbox" />

        <CheckBox
            android:id="@+id/ethic_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:checked="true"
            android:enabled="false"
            android:onClick="onCheckesClick"
            android:text="@string/ethic_checkbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="Numero de preguntas" />

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dificultad" />

        <RadioGroup
            android:id="@+id/select_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/high_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckedChanged"
                android:text="@string/high_radio_button" />

            <RadioButton
                android:id="@+id/medium_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onCheckedChanged"
                android:text="@string/medium_radio_button" />

            <RadioButton
                android:id="@+id/low_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckedChanged"
                android:text="@string/low_radio_button" />

        </RadioGroup>

        <Switch
            android:id="@+id/enable_clues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="Habilitar pistas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No. de pistas" />

            <Spinner
    android:id="@+id/number_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/try_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar cambios" />
</LinearLayout>

    </LinearLayout>
</LinearLayout>